refactor response classes, extend a common BaseResponse